--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@okta/okta-angular": "~1.1.0",
+    "@oktadev/schematics": "^0.6.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.4",
+    "ngx-markdown": "^7.1.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
